tests/ui/unresolved-type.stderr
error[E0412]: cannot find type `L` in this scope
 --> tests/ui/unresolved-type.rs:7:17
  |
7 | #[stream(item = L)] //~ ERROR cannot find type `L` in this scope
  |                 ^ not found in this scope
  |
help: you might be missing a type parameter
  |
8 | async fn foo<L>() {}
  |             +++
